# pyopenlayersqt

./: .gitignore  .pylintrc  =0.13  BEFORE_AFTER_FIX.md  CONTRIBUTING.md  FEATURE_GUIDE.md  FIX_SUMMARY.md  MANIFEST.in  PERFORMANCE_IMPROVEMENTS.md  README.md  demo.py  pyproject.toml  test_coordinates.py  test_great_circle.py  test_performance.py  test_small_dataset.py
app/: csv_fast_points_viewer.py
demo/: demo.py
examples/: 01_basic_map_with_markers.py  01_quick_start.py  02_complete_example.py  02_layer_types_and_styling.py  03_fast_points_performance.py  03_measurement_mode.py  03_performance_settings.py  04_sortable_table.py  04_wms_and_base_layers.py  05_range_slider_filter.py  05_raster_overlay.py  06_geo_uncertainty_ellipses.py  06_selection_recoloring.py  07_background_worker_heatmap.py  07_feature_selection.py  07_high_performance_selection.py  07_plot_integration.py  07_plot_map_table_sync.py  07_qcolor_and_zorder.py  07_two_tables_selection_benchmark.py  08_all_styles_qcolor.py  08_minimal_plot.py  08_table_integration.py  09_coordinate_display.py  09_selection_and_recoloring.py  10_range_slider_filtering.py  11_measurement_tool.py  12_coordinate_display.py  13_dual_table_linking.py  14_delayed_render_interrupt.py  14_plot_widget_integration.py  15_load_data_and_zoom.py  16_metadata_only_table_linking.py  16_time_series_map_table_plot.py  17_dted_terrain_overlay.py  17_map_right_click_context_menu.py  18_gradient_track_speed.py  18_viewshed_terrain.py  19_movable_vector_features.py  19_virtual_feature_table.py  (+3 more)
pyopenlayersqt/: __init__.py  dted.py  (+10 more)
(+11 files in other folders)
