[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyopenlayersqt"
version = "0.1.0"
description = "OpenLayers + Qt (QWebEngine) mapping widget for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "PySide6>=6.5",
  "numpy>=1.23",
  "pillow>=10.0",
  "matplotlib>=3.7",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pyopenlayersqt*"]

# IMPORTANT: include the HTML/JS/CSS assets in the wheel
[tool.setuptools.package-data]
pyopenlayersqt = [
  "resources/*.html",
  "resources/*.js",
  "vendor/ol/*.js",
  "vendor/ol/*.css",
  "favicon.ico",
]

